# paperless-fuse

./: Cargo.toml
src/: main.rs
