[package]
name = "paperless-fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.12"
clap = {version="4", features=["derive"] }
libc = "0.2"
env_logger = "0.10"
users = "0.11"
paperless = {path="../paperless"}